INC-1165 Performance improvements for Case  Note type count (#1538)
* INC-1165 Case Note by type performance improvements